--- a/mindspaceapp/templates/login.html
+++ b/mindspaceapp/templates/login.html
@@ -105,12 +105,19 @@
 
   <div class="login-container">
     <h2>Login</h2>
+    {% if messages %}
+    <div class="messages">
+      {% for message in messages %}
+      <p style="color: red; font-size: 0.9rem; margin-bottom: 10px;">{{ message }}</p>
+      {% endfor %}
+    </div>
+    {% endif %}
 
     <!-- Correct Django form -->
     <form method="POST">
       {% csrf_token %}
-      <input type="text" name="username" placeholder="Username" required><br>
-      <input type="password" name="password" placeholder="Password" required><br>
+      <input type="text" name="username" placeholder="Username" required autocomplete="username"><br>
+      <input type="password" name="password" placeholder="Password" required autocomplete="current-password"><br>
       <button type="submit">Login</button>
     </form>
 
